# scrapybius

./: .gitignore  README.md  execute.py  pyproject.toml  scrapy.cfg
databius/: items.py  middlewares.py  pipelines.py  settings.py
databius/spiders/: apache_org.py  firstmark_com.py
